# SimplerEnv

./: .gitignore  .gitmodules  CODEOWNERS  Dockerfile  README.md  SETUP.md  job.sh  pyproject.toml  run_evaluation.sh  setup_evaluation.sh  simpler_env_miniconda.md  test_evaluation.py
.devcontainer/: devcontainer.json
docker/: Dockerfile  README.md  build_docker.sh  entrypoint.sh  run_docker.sh
docs/: openpi.md
policies/lerobotpi/: README.md
scripts/: README.md  score.py
scripts/g3_lerobotpi/: challenge_widowx.py  challenge_widowx.sh  eval_rot6d.py  evaluate_fractal.py  evaluate_fractal.sh  g3_configuration_pi0.py  g3_pi0_or_fast.py
scripts/g3_lerobotpi0/: README.md  evaluate_fractal.py  job.sh
scripts/gr00t/: data_config.py  embodiment_tags.py  evaluate_bridge.py  evaluate_fractal.py
scripts/group2/: README.md  evaluate_bridge.py  evaluate_fractal.py
scripts/group3/: README.md  environment.yaml  evaluate_bridge.py  evaluate_bridge_multi.py  evaluate_fractal.py  evaluate_fractal_multi.py  g3_configuration_pi0.py  g3_pi0_or_fast.py
scripts/group4/: .gitignore  README.md  evaluate_bridge.py  evaluate_bridge_original.py  evaluate_fractal.py
scripts/group5/: README.md  eval_fractal.sh  eval_widowx.sh  evaluate_fractal.py  evaluate_widowx.py  run.sh
scripts/hsr_openpi/: README.md  evaluate_fractal.py
scripts/lerobotpi/: README.md  evaluate_fractal.py
scripts/mile/: evaluate_fractal.py
scripts/octo/: evaluate_octo.py  (+2 more)
simpler_env/: simple_inference_visual_matching_prepackaged_envs.py  simple_inference_visual_matching_prepackaged_envs_lerobot.py
(+90 files in other folders)
